tests/negative_tests/syntax_errors/missing_param_type.c
// INVALID - Syntax Error: parameter must have type
// Expected: "expected type specifier"
int foo(x) {  // ERROR: parameter 'x' has no type
    return x;
}
